[gd_scene load_steps=3 format=3 uid="uid://din8gotk4rx34"]

[ext_resource type="Script" path="res://scripts/ui/tap_areas.gd" id="1_dhg2i"]
[ext_resource type="Texture2D" uid="uid://bitmja1fmgt1n" path="res://assets/AnnaAlanArt/alan_arrow.png" id="3_xnegl"]

[node name="TapAreas" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dhg2i")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 640.0
offset_right = 1280.0
offset_bottom = 715.0

[node name="UpButton" type="Button" parent="VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="UpArrow" type="Sprite2D" parent="VBoxContainer/UpButton"]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(490, 417)
rotation = -1.5708
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_xnegl")

[node name="UpArrow2" type="Sprite2D" parent="VBoxContainer/UpButton"]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(148, 190)
rotation = -1.5708
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_xnegl")

[node name="DownButton" type="Button" parent="VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.5

[node name="DownArrow" type="Sprite2D" parent="VBoxContainer/DownButton"]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(491, 52)
rotation = 1.5708
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_xnegl")

[node name="DownArrow2" type="Sprite2D" parent="VBoxContainer/DownButton"]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(149, 162)
rotation = 1.5708
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_xnegl")
